<resources>
    <string name="app_name">Magic Squares</string>
    <string name="author" translatable="false">paocorp.com</string>
    <string name="store_url" translatable="false">https://play.google.com/store/apps/details?id=com.paocorp.magicsquares</string>
    <string name="facebook_app_id" translatable="false">914409908597657</string>
    <string name="interstitial" translatable="false">ca-app-pub-2669557761715669/2388367230</string>
    <string name="banner" translatable="false">ca-app-pub-2669557761715669/4672873235</string>
    <string name="app_icon_url" translatable="false">http://paocorp.com/res/images/ico/magicsquare.png</string>
    <string name="blank" translatable="false">&#160;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="check">Check</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="share">Share</string>

    <string name="rate_app">Rate this app</string>
    <string name="need_help">Need some help ?</string>
    <string name="resolve">Give up</string>
    <string name="resolve_title">Give up the game</string>
    <string name="resolve_msg">Are you sure you want to give up this game ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="need_help_text">In recreational mathematics, a magic square is an arrangement of distinct numbers (i.e., each number is used once), usually integers, in a square grid, where the numbers in each row, and in each column, and the numbers in the main and secondary diagonals, all add up to the same number, called the "magic constant."</string>
    <string name="need_help_text2">A magic square has the same number of rows as it has columns, and in conventional math notation, "n" stands for the number of rows (and columns) it has.</string>
    <string name="new_game">Start a new game</string>
    <string name="shareFB">Share on Facebook</string>
    <string name="fb_share_title">I played Magic Squares !</string>
    <string name="fb_ContentDesc">I like this Magic Squares app !</string>
    <string name="fb_solved">I solved a magic square !</string>
    <string name="days">&#160;%1$d days</string>
    <string name="hours" translatable="false">&#160;%1$d h</string>
    <string name="minutes" translatable="false">&#160;%1$d min</string>
    <string name="seconds" translatable="false">&#160;%1$d s</string>
    <string name="end_title">Congratulations !</string>
    <string name="end_title_failed">What a pity…</string>
    <string name="end_title2">You solved this Magic Square in%1$s !</string>
    <string name="end_title2_failed">You did not manage to solve this magic square but next time you definitely will.</string>
    <string name="magic_cst">Magic constant : %1$d</string>

    <string name="billingKey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAxiWfgZl1W5pxE8BpGXY7Pd6yPHOqzSgZbxAsAFsnNtdjQyECl97v8mjN2zqx5eM4HVdeaa96kD5uwe4yJMov29c+qxyv/kTOnRls5JarKDjSc0OyvIsRh5JYvdrBbcJVqbxjOhQnBMC1AzXOzo857TD+n067Jy8w0S8lFgjINHRH2s4D/psiFPYQhszSzJ8E/nhYBoBw/RD+nLXAoNPw6mYY35pzrmlmWYDG8kfF9L/1LbeRcAx/DqqcOEuKysKqH9KR3fNm0XRC0q7H4lUyNbYOGMTN1UNNID2W+WYddckoDky+4Pu3p501M/4AOjz6J5SkUvIOQxpyuQnwII0StwIDAQAB</string>
    <string name="purchase">Purchase</string>
    <string name="endAds">Tired of ads ?</string>
    <string name="purchaseNoAds">Make a one-time payment of %1$s</string>
    <string name="noMoreAds">No more ads forever</string>
    <string name="purchaseNotDone">Purchase not done</string>
    <string name="purchaseError">Error while making the payment</string>
    <string name="purchaseThx">Thanks for your purchase</string>
</resources>
