<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_game"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/new_game" />
        <item
            android:id="@+id/action_resolve2"
            android:icon="@drawable/ic_flag_white_24dp"
            android:title="@string/resolve" />
        <item
            android:id="@+id/action_help2"
            android:icon="@drawable/ic_help_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/rate_app" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/com_facebook_button_icon"
                android:title="@string/shareFB" />
        </menu>
    </item>

</menu>
