<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="center_vertical"
    tools:context=".Activities.EndActivity">

    <TextView
        android:id="@+id/endTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_darken4"
        android:textSize="@dimen/headline_text_size"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/end_title2"/>

    <TextView
        android:id="@+id/endTitle"
        android:layout_below="@+id/endTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_darken4"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:hint="@string/end_title"/>

    <RelativeLayout
        android:id="@+id/square"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/endTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableLayout
            android:id="@+id/tabsq33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="1dp">

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="1sp"
                android:paddingRight="1sp"
                android:paddingTop="1sp">

                <TextView
                    android:id="@+id/tv11"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv12"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv13"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="1sp"
                android:paddingRight="1sp">

                <TextView
                    android:id="@+id/tv21"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv22"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv23"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="1sp"
                android:paddingRight="1sp">

                <TextView
                    android:id="@+id/tv31"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv32"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv33"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/square"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/green_darken2"
                    android:textSize="@dimen/square_text_size"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/restart"
        android:layout_below="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:background="@drawable/button_restart"
        android:drawableEnd="@drawable/ic_refresh_black_24dp"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/com_facebook_button_icon"
        android:onClick="restartGame"
        android:paddingLeft="21dp"
        android:paddingRight="21dp"
        android:text="@string/new_game"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/fbshare"
        android:layout_below="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:background="@drawable/button_fb"
        android:drawableEnd="@drawable/com_facebook_button_icon"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/com_facebook_button_icon"
        android:onClick="shareFB"
        android:paddingLeft="21dp"
        android:paddingRight="21dp"
        android:text="@string/shareFB"
        android:textColor="@color/white"/>
</RelativeLayout>